logs/dag_id=weather_dag/run_id=manual__2024-12-07T20:58:13.004183+00:00/task_id=create_table/attempt=3.log
[2024-12-07T21:00:22.946+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag.create_table manual__2024-12-07T20:58:13.004183+00:00 [queued]>
[2024-12-07T21:00:22.955+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag.create_table manual__2024-12-07T20:58:13.004183+00:00 [queued]>
[2024-12-07T21:00:22.956+0000] {taskinstance.py:2170} INFO - Starting attempt 3 of 3
[2024-12-07T21:00:22.969+0000] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): create_table> on 2024-12-07 20:58:13.004183+00:00
[2024-12-07T21:00:22.977+0000] {standard_task_runner.py:60} INFO - Started process 16840 to run task
[2024-12-07T21:00:22.980+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'weather_dag', 'create_table', 'manual__2024-12-07T20:58:13.004183+00:00', '--job-id', '366', '--raw', '--subdir', 'DAGS_FOLDER/extract.py', '--cfg-path', '/tmp/tmp59b0ev73']
[2024-12-07T21:00:22.981+0000] {standard_task_runner.py:88} INFO - Job 366: Subtask create_table
[2024-12-07T21:00:22.999+0000] {warnings.py:109} WARNING - /home/***/.local/lib/python3.8/site-packages/***/settings.py:194: DeprecationWarning: The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
  SQL_ALCHEMY_CONN = conf.get("database", "SQL_ALCHEMY_CONN")

[2024-12-07T21:00:23.039+0000] {task_command.py:423} INFO - Running <TaskInstance: weather_dag.create_table manual__2024-12-07T20:58:13.004183+00:00 [running]> on host 8271fbcad3f4
[2024-12-07T21:00:23.133+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='thiernosidybah232@gmail.com' AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='weather_dag' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-12-07T20:58:13.004183+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-12-07T20:58:13.004183+00:00'
[2024-12-07T21:00:23.135+0000] {sql.py:276} INFO - Executing: 
                        DROP TABLE IF EXISTS Weather_table;
                        CREATE TABLE IF NOT EXISTS Weather_table(
                            city TEXT,
                            weather_description TEXT , 
                            temp_c NUMERIC,
                            feels_like_celsius NUMERIC, 
                            min_temp_c NUMERIC,
                            max_temp_c NUMERIC, 
                            pressure NUMERIC, 
                            humidity NUMERIC, 
                            wind_speed NUMERIC, 
                            time_of_record TIMESTAMP, 
                            sunrise_time TIMESTAMP, 
                            sunset_time TIMESTAMP  
                    
[2024-12-07T21:00:23.146+0000] {base.py:83} INFO - Using connection ID 'weather_database_connection' for task execution.
[2024-12-07T21:00:23.156+0000] {base.py:83} INFO - Using connection ID 'weather_database_connection' for task execution.
[2024-12-07T21:00:23.162+0000] {sql.py:450} INFO - Running statement: 
                        DROP TABLE IF EXISTS Weather_table;
                        CREATE TABLE IF NOT EXISTS Weather_table(
                            city TEXT,
                            weather_description TEXT , 
                            temp_c NUMERIC,
                            feels_like_celsius NUMERIC, 
                            min_temp_c NUMERIC,
                            max_temp_c NUMERIC, 
                            pressure NUMERIC, 
                            humidity NUMERIC, 
                            wind_speed NUMERIC, 
                            time_of_record TIMESTAMP, 
                            sunrise_time TIMESTAMP, 
                            sunset_time TIMESTAMP  
                    , parameters: None
[2024-12-07T21:00:23.163+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 16:                     
                             ^

[2024-12-07T21:00:23.175+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=weather_dag, task_id=create_table, execution_date=20241207T205813, start_date=20241207T210022, end_date=20241207T210023
[2024-12-07T21:00:23.189+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 366 for task create_table (syntax error at end of input
LINE 16:                     
                             ^
; 16840)
[2024-12-07T21:00:23.232+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-12-07T21:00:23.263+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
